did some small styling on the html

--- a/index.html
+++ b/index.html
@@ -7,12 +7,42 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    
 
+    <div class="container">
+        <h3>Skapa ny kontakt</h3>
+        <form id="contactForm">
+            <input type="text" id="name" name="name" required placeholder="Ange namn">
+            <input type="tel" id="phone" name="phone" required placeholder="Ange telefonnummer">
+            <button type="submit">Skapa</button>
+        </form>
+    </div>
+        <div id="kontaktLista">
+            <h3>Kontakter</h3>
+            <ul id="kontakter">
+                <!-- Exempel på kontakter -->
+                <li class="kontakt">
+                    <input type="text" id="name" name="name" required placeholder="Renée">
+                    <input type="tel" id="phone" name="phone" required placeholder="0700493525">
+                    <button class="editBtn">Ändra</button>
+                    <button class="deleteBtn">Radera</button>
+                </li>
+                <li class="kontakt">
+                    <input type="text" id="name" name="name" required placeholder="Renée">
+                    <input type="tel" id="phone" name="phone" required placeholder="0700493525">
+                    <button class="editBtn">Ändra</button>
+                    <button class="deleteBtn">Radera</button>
+                </li>
+                <li class="kontakt">
+                    <input type="text" id="name" name="name" required placeholder="Renée">
+                    <input type="tel" id="phone" name="phone" required placeholder="0700493525">
+                    <button class="editBtn">Ändra</button>
+                    <button class="deleteBtn">Radera</button>
+                </li>
+            </ul>
+        </div>
+    </div>
 
-
-
-
+   
 
 
 
