--- a/index.html
+++ b/index.html
@@ -9,43 +9,39 @@
 <body>
 
     <div class="container">
-        <h3>Skapa ny kontakt</h3>
+        <h3>New contact</h3>
         <form id="contactForm">
-            <input type="text" id="name" name="name" required placeholder="Ange namn">
-            <input type="tel" id="phone" name="phone" required placeholder="Ange telefonnummer">
-            <button type="submit">Skapa</button>
+            <input type="text" class="contact-name" name="name" required placeholder="Name" autocomplete="name">
+            <input type="tel" class="contact-phone" name="phone" required placeholder="Mobilenumber" autocomplete="tel">
+            <button type="submit">New</button>
+            <button type="button" id="clearListBtn">Clear List</button>
+            <div class="error-message">You may not create an empty contact</div>
         </form>
     </div>
-        <div id="kontaktLista">
-            <h3>Kontakter</h3>
-            <ul id="kontakter">
-                <!-- Exempel på kontakter -->
-                <li class="kontakt">
-                    <input type="text" id="name" name="name" required placeholder="Renée">
-                    <input type="tel" id="phone" name="phone" required placeholder="0700493525">
-                    <button class="editBtn">Ändra</button>
-                    <button class="deleteBtn">Radera</button>
-                </li>
-                <li class="kontakt">
-                    <input type="text" id="name" name="name" required placeholder="Renée">
-                    <input type="tel" id="phone" name="phone" required placeholder="0700493525">
-                    <button class="editBtn">Ändra</button>
-                    <button class="deleteBtn">Radera</button>
-                </li>
-                <li class="kontakt">
-                    <input type="text" id="name" name="name" required placeholder="Renée">
-                    <input type="tel" id="phone" name="phone" required placeholder="0700493525">
-                    <button class="editBtn">Ändra</button>
-                    <button class="deleteBtn">Radera</button>
-                </li>
-            </ul>
-        </div>
+
+    <div id="kontaktLista">
+        <h3>Contacts</h3>
+        <ul id="kontakter">
+            <li class="kontakt">
+                <input type="text" class="contact-name" required placeholder="Renée">
+                <input type="tel" class="contact-phone" required placeholder="0700493525">
+                <button class="editBtn">Edit</button>
+                <button class="deleteBtn">Delete</button>
+            </li>
+            <li class="kontakt">
+                <input type="text" class="contact-name" required placeholder="Renée">
+                <input type="tel" class="contact-phone" required placeholder="0700493525">
+                <button class="editBtn">Edit</button>
+                <button class="deleteBtn">Delete</button>
+            </li>
+            <li class="kontakt">
+                <input type="text" class="contact-name" required placeholder="Renée">
+                <input type="tel" class="contact-phone" required placeholder="0700493525">
+                <button class="editBtn">Edit</button>
+                <button class="deleteBtn">Delete</button>
+            </li>
+        </ul>
     </div>
-
-   
-
-
-
 
 <script src="/js/script.js"></script>
 </body>
