Done with inlämning

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <button class="editBtn">Edit</button>
                 <button class="deleteBtn">Delete</button>
                 <p class="error-message"></p>
+                <!-- Min JavaScript has been added efter the three first kontakter -->
             </li>
         </ul>
     </div>
-
 <script src="/js/script.js"></script>
 </body>
 </html>
